resolved issues related to serialization/deserialization in kafka

--- a/services/event-api/src/main/resources/application.yml
+++ b/services/event-api/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: event-api
+
   kafka:
     bootstrap-servers: localhost:9092
     producer:
@@ -9,6 +12,9 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         spring.json.trusted.packages: "*"
+        spring.json.add.type.headers: false
+
+
 
 
 
