--- a/services/websocket-alerts/src/main/resources/application.yml
+++ b/services/websocket-alerts/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 spring:
   application:
-    name: feature-aggregator
+    name: websocket-alerts
 
   kafka:
     bootstrap-servers: localhost:9092
 
     consumer:
-      group-id: feature-aggregator
-      auto-offset-reset: earliest
-      enable-auto-commit: false
+      group-id: websocket-alerts
+      auto-offset-reset: latest
 
       key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
@@ -17,16 +16,8 @@ spring:
         spring.deserializer.key.delegate.class: org.apache.kafka.common.serialization.StringDeserializer
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
         spring.json.use.type.headers: false
-        spring.json.value.default.type: com.sudhird.risk.feature_aggregator.model.UserEvent
+        spring.json.value.default.type: com.sudhird.risk.websocket_alerts.model.RiskDecisionEvent
         spring.json.trusted.packages: "*"
 
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-
-  redis:
-    host: localhost
-    port: 6379
-
 server:
-  port: 8081
+  port: 8082
